--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "name": "mini-project",
     "version": "1.0.0",
+    "type": "module",
     "devDependencies": {
         "cypress": "^14.3.2",
-        "http-server": "^14.1.1"
+        "http-server": "^14.1.1",
+        "mochawesome": "^7.1.3"
     }
 }
