--- a/.github/workflows/cye2e.yml
+++ b/.github/workflows/cye2e.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Run Cypress tests
         run: npx cypress run
 
+      - name: Debug - Check Report content
+        run: cat /home/runner/work/counter/counter/cypress/results/mochawesome.html || true
+
       - name: Upload Cypress Mochawesome HTML Report
         uses: actions/upload-artifact@v4
         with:
