--- a/.github/workflows/cye2e.yml
+++ b/.github/workflows/cye2e.yml
@@ -35,5 +35,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cypress-report
-          path: cypress/results/*.html
+          path: cypress/results/
           retention-days: 10
