--- a/.github/workflows/cye2e.yml
+++ b/.github/workflows/cye2e.yml
@@ -27,3 +27,10 @@ jobs:
 
       - name: Run Cypress tests
         run: npx cypress run
+
+      - name: Upload Cypress Mochawesome HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-report
+          path: cypress/results/
+          retention-days: 10
